[project]
name = "ducklake-api"
version = "0.1.0"
description = "A simple REST API for DuckLake"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.1",
    "fastapi[standard]>=0.115.13",
    "pyarrow>=20.0.0",
    "scalar-fastapi>=1.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "nox>=2025.5.1",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[[tool.mypy.overrides]]
module = ["scalar_fastapi.*"]
ignore_missing_imports = true
